Cleaning code (java and tests) files